--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </div>
                 </div>
                 
-                <a href="https://www.youtube.com/c/Bedimcode/" target="_blank" class="clock__logo">Bedimcode</a>
+                <a href="" target="_blank" class="clock__logo">Congc</a>
             </div>
         </section>
 
